overflow fix

--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -4,17 +4,17 @@ $light: #bac7a7;
 $cream: #e5e4cc;
 $lightCream: #fffbdf;
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
 
 .sidebar {
 	background-color: $cream;
 }
 
 .about-header {
-	font-family: 'Playfair Display', serif;
 	h3 {
+		font-family: 'Montserrat', sans-serif;
 		font-size: 1.6rem;
-		line-height: 1;
+		line-height: 1.4rem;
 		font-weight: 900;
 		color: #333;
 		letter-spacing: -0.5px;
@@ -24,9 +24,9 @@ $lightCream: #fffbdf;
 .about-name {
 	color: $dark;
 	h1 {
-		font-family: 'Montserrat', sans-serif;
+		font-family: 'Playfair Display', serif;
 		font-weight: 900;
-		letter-spacing: -2.5px;
+		letter-spacing: -1px;
 		font-size: 6.5vh;
 		transform-origin: translateX(20px) translateY(0px) translateZ(0px);
 		transition: opacity 500ms ease 0s, transform 500ms ease 0s;
@@ -217,12 +217,20 @@ footer {
 	display: none;
 }
 
-@media screen and (max-width: 625px) {
+.col-sm-7 {
+	overflow-y: auto;
+}
+
+@media screen and (max-width: 575px) {
 	.arrow-down {
 		clear: both;
 		display: block;
 		font-size: x-large;
 		color: $light;
+	}
+
+	.col-sm-7 {
+		overflow-y: visible;
 	}
 }
 
